--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						document.getElementById("deep_image").setAttribute("src", this.responseText);
 					}
 				};
-				xhttp.open("GET", "http://inspirobot.me/api?generate=true", true);
+				xhttp.open("GET", "https://inspirobot.me/api?generate=true", true);
 				xhttp.send();
 		  	}
 		</script>
