--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Inspiration</title>
+		<title>Inspiration Bot - SteadyStatus21</title>
+		<div id="ghost" class="effect"></div>
 		<script>
 		  	function createPage() {
 		  		var container = document.createElement("div");
@@ -34,6 +35,7 @@
 				xhttp.send();
 		  	}
 		</script>
+		<script src="https://raw.githubusercontent.com/tholman/cursor-effects/master/src/ghostCursor.js"></script>
 	</head>
 	<body onload="createPage()"></body>
 </html>
