--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				xhttp.send();
 		  	}
 		</script>
-		<script src="https://raw.githubusercontent.com/tholman/cursor-effects/master/src/ghostCursor.js"></script>
+		<script src="ghostCursor.js"></script>
 	</head>
 	<body onload="createPage()"></body>
 </html>
